# OpenAPI_PredictiveCoding

./: .env.example  .gitignore  README.md  conf.py  myst.yml  pyproject.toml
_build/logs/: myst.build.json
_build/site/: config.json  objects.inv
_build/site/content/: chatbot.json
_build/site/public/: chatbot-00242daf169e122df1262e79c4bfd369.ipynb  chatbot-074a938666b5b4ec91f17110c71aac9b.ipynb  chatbot-10a18bab63dd2494952f23d9c6bba636.ipynb  chatbot-16184d4adcb3e4f35918c16dfa7be79e.ipynb  chatbot-17da314670eb7a0eaa06c90f7695adb5.ipynb  chatbot-1a4741481924067f400edab619cbc40f.ipynb  chatbot-2462f8c444046820ae51581af9cebdc8.ipynb  chatbot-326bf16d658bfe9bb969c8447f205f25.ipynb  chatbot-40405914f6a2e0ae0d1594b16989c1ac.ipynb  chatbot-474e10e6e5e0fb25edd2636a070297a1.ipynb  chatbot-4a5acdb56bc6f589a82dd507922a88ac.ipynb  chatbot-57f8e14e34dd8b2a6b731a90e30f93ca.ipynb  chatbot-5b2c55f1d0605fc312d0d52fe316f09a.ipynb  chatbot-669b330fcae0080e069800513e00d633.ipynb  chatbot-74f0c43ca466ad763a394b8a1ecb0e5f.ipynb  chatbot-7b2811e3e44833afd12638219ac1067e.ipynb  (+17 more)
models/: __init__.py  chat_message.py  chat_room.py  chatbot_response.py  conversation.py  expectation.py  expectation_revision.py  user.py  violation.py
notebooks/: chatbot.ipynb
services/: __init__.py  db.py  mock_service.py  mongo_service.py  prompt_builder_service.py
utils/: helpers.py  model_operations.py  module_operations.py
utils/prompt_templates/: chatbot_response_template.txt  expecatation_template.txt  expectation_revision_template.txt  voe_template.txt
