[tool.poetry]
name = "openapi-predictivecoding"
version = "0.1.0"
description = ""
authors = ["rokussadee <rokus.sadee@student.ehb.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
pymongo = "^4.6.1"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
