[tool.poetry]
name = "openapi-predictivecoding"
version = "0.1.0"
description = ""
authors = ["rokussadee <rokus.sadee@student.ehb.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
openai = "1.13.3"
python-dotenv = "^1.0.1"
pymongo = "^4.6.1"
ipywidgets = "^8.1.2"
mystmd = "^1.1.42"
sphinx-togglebutton = "^0.3.2"
email-validator = "^2.1.0.post1"
nbimporter = "^0.3.4"
password-validator = "^1.0"
bcrypt = "^4.1.2"
nbconvert = "7.16.2"
nbstripout = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
